bug-119: Removed unecessary padding to match alignment/padding on all sides

--- a/input/assets/css/_checkout-shipping.scss
+++ b/input/assets/css/_checkout-shipping.scss
@@ -213,7 +213,7 @@
 	background: lighten($light-grey, 10%);
 	border: 1px solid $light-grey;
 	margin: 1em;
-	padding-top: 2em;
+	/**padding-top: 2em;*/
 }
 
 .order-summary-img {
